--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ structlog==23.2.0
 colorama==0.4.6
 
 # Configuration and environment
-pydantic==2.5.2
+pydantic>=2.11.7,<3.0.0
 pydantic-settings==2.1.0
 
 # Async utilities
