--- a/.github/workflows/daily-scrape.yml
+++ b/.github/workflows/daily-scrape.yml
@@ -115,6 +115,9 @@ jobs:
     needs: scrape-content
     runs-on: ubuntu-latest
     if: failure() && github.event_name == 'schedule'
+    permissions:
+      issues: write
+      contents: read
     
     steps:
     - name: Send failure notification
