Fix Python indentation error in GitHub Actions workflow
- Changed multi-line Python code to single-line format
- Resolves IndentationError caused by YAML indentation interference
- Uses semicolons to separate Python statements on one line
- Maintains functionality while fixing syntax issues

--- a/.github/workflows/daily-scrape.yml
+++ b/.github/workflows/daily-scrape.yml
@@ -74,21 +74,9 @@ jobs:
         
       run: |
         if [ "${{ github.event.inputs.dry_run }}" = "true" ]; then
-          python -c "
-          import asyncio
-          from datetime import datetime
-          from run_ai_digest_pipeline import run_ai_digest_pipeline
-          print('Running enhanced AI digest pipeline in dry-run mode')
-          asyncio.run(run_ai_digest_pipeline(datetime.now().strftime('%Y-%m-%d'), dry_run=True))
-          "
+          python -c "import asyncio; from datetime import datetime; from run_ai_digest_pipeline import run_ai_digest_pipeline; print('Running enhanced AI digest pipeline in dry-run mode'); asyncio.run(run_ai_digest_pipeline(datetime.now().strftime('%Y-%m-%d'), dry_run=True))"
         else
-          python -c "
-          import asyncio
-          from datetime import datetime
-          from run_ai_digest_pipeline import run_ai_digest_pipeline
-          print('Running enhanced AI digest pipeline')
-          asyncio.run(run_ai_digest_pipeline(datetime.now().strftime('%Y-%m-%d')))
-          "
+          python -c "import asyncio; from datetime import datetime; from run_ai_digest_pipeline import run_ai_digest_pipeline; print('Running enhanced AI digest pipeline'); asyncio.run(run_ai_digest_pipeline(datetime.now().strftime('%Y-%m-%d')))"
         fi
     
     - name: Clean up old content (weekly)
