Add Slack integration for daily digest posting
✨ Features:
- Created SlackNotifier service with beautiful Block Kit formatting
- Integrated Slack posting into daily AI digest pipeline
- Added personal error notifications to #automation_errors
- Updated GitHub Actions workflow with Slack environment variables
- Comprehensive documentation and testing

📱 Slack Integration:
- Daily digests posted to #ai-daily-digest at 7 AM AEST
- Error notifications sent to #automation_errors
- Graceful handling if Slack is unavailable
- Formatted messages with articles, summaries, and links

📚 Documentation:
- SLACK_INTEGRATION_PLAN.md - Complete technical plan
- SLACK_SETUP_GUIDE.md - Step-by-step setup guide
- SLACK_QUICK_REFERENCE.md - Quick reference card
- SYSTEM_OVERVIEW.md - Updated system documentation

🧪 Testing:
- test_slack_integration.py - Comprehensive integration tests
- All tests passing locally
- Webhooks verified and working

🔧 Configuration:
- Added SLACK_WEBHOOK_URL setting
- Added SLACK_ERROR_WEBHOOK_URL setting
- Added SLACK_ENABLED flag
- Updated .env.example with Slack configuration

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,9 @@ PROCESS_HOURS_BACK=24
 # Performance Settings
 MAX_CONCURRENT_REQUESTS=10
 BATCH_SIZE=100
+
+# Slack Configuration
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+SLACK_ERROR_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/ERROR/WEBHOOK/URL
+SLACK_ENABLED=true
+SLACK_CHANNEL_NAME=ai-daily-digest
