Add Phase 2 interactive features: webhook server, Airtable integration, article scraper

--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,12 @@ SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
 SLACK_ERROR_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/ERROR/WEBHOOK/URL
 SLACK_ENABLED=true
 SLACK_CHANNEL_NAME=ai-daily-digest
+
+# Slack App Configuration (for interactive buttons)
+SLACK_BOT_TOKEN=xoxb-your-bot-token-here
+SLACK_SIGNING_SECRET=your-signing-secret-here
+
+# Airtable Configuration (for content pipeline)
+AIRTABLE_API_KEY=your-airtable-api-key
+AIRTABLE_BASE_ID=your-airtable-base-id
+AIRTABLE_TABLE_NAME=Content Pipeline
