--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,13 @@ beautifulsoup4>=4.12.0  # HTML parsing - allow minor updates
 lxml>=4.9.0  # XML parsing - allow minor updates
 requests>=2.31.0
 aiofiles>=23.2.0
+newspaper3k>=0.2.8  # Full article extraction
+trafilatura>=1.6.0  # Alternative article extraction
+
+# Phase 2: Interactive features
+fastapi>=0.104.0  # Webhook server
+uvicorn>=0.24.0  # ASGI server
+pyairtable>=2.3.0  # Airtable API client
 
 # Email processing
 imapclient>=3.0.0
