Add Dockerfile and safeguards for Railway deployment

--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,9 @@
 [build]
-builder = "nixpacks"
-
-[build.nixpacksPlan.phases.setup]
-nixPkgs = ["python313"]
-
-[build.nixpacksPlan.phases.install]
-cmds = ["pip install -r requirements-webhook.txt"]
+builder = "dockerfile"
+dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "python -m uvicorn api.webhook_server:app --host 0.0.0.0 --port $PORT"
+healthcheckPath = "/health"
+healthcheckTimeout = 100
+restartPolicyType = "on_failure"
+restartPolicyMaxRetries = 10
