Major codebase cleanup and reorganization
- Install brotli for RSS feed compression support
- Delete 26 obsolete markdown files (debug reports, old guides)
- Delete 10 obsolete test files (one-time tests)
- Move utility scripts to scripts/ directory
- Update GitHub Actions workflow paths
- Update README with current system state
- Create PROJECT_STATUS.md (current state overview)
- Create CODEBASE_CLEANUP_TODO.md (master cleanup plan)

Changes:
- requirements.txt: Add brotli>=1.1.0
- scripts/: New directory for utilities
- README.md: Simplified, current architecture
- .github/workflows/: Updated import paths

Result: Clean, organized codebase ready for production

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ requests>=2.31.0
 aiofiles>=23.2.0
 newspaper3k>=0.2.8  # Full article extraction
 trafilatura>=1.6.0  # Alternative article extraction
+brotli>=1.1.0  # Compression support for RSS feeds
 
 # Phase 2: Interactive features
 fastapi>=0.104.0  # Webhook server
